# mybrowser

./: README.md  pyproject.toml
src/: request.py  url.py
src/mybrowser/: __init__.py  request.py  url.py
tests/: __init__.py  test_request.py  test_url.py
