[project]
name = "mybrowser"
version = "0.1.0"
description = "A small browser written in Python."
readme = "README.md"
authors = [
{ name = "Julian Stürmer", email = "18049549+jstuermer@users.noreply.github.com" },
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
mybrowser = "mybrowser:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["mypy>=1.15.0", "pytest>=8.3.5", "ruff>=0.9.10"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["ALL"]
ignore = [
"COM812", # trailing commas are not be mandatory, the formatter already ensures consistent use 
]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["S101"] # allow use of assert in tests

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
mypy_path = "src"
explicit_package_bases = true
